# dashboard_prototype

./: .env  Cargo.toml
client/: package.json  pnpm-lock.yaml
client/src/lib/: Account.svelte.ts  Admin.svelte.ts  Result.ts  tools.ts
client/src/routes/: +layout.svelte
server/: Cargo.toml
server/src/: api.rs  handlers.rs  main.rs  middlewares.rs  utils.rs
server/src/api/calendar/: mod.rs  schedule.rs
server/src/api/invitation/: kanban.rs  mod.rs
server/src/api/kanban/: list.rs  mod.rs  task.rs
server/src/api/role_permission/: mod.rs  permission.rs  role.rs
server/src/api/user/: account.rs  auth.rs  mod.rs
server/src/handlers/calendar/: mod.rs  schedule.rs
server/src/handlers/invitation/: kanban.rs  mod.rs
server/src/handlers/kanban/: list.rs  mod.rs  task.rs
server/src/handlers/role_permission/: mod.rs  permission.rs  role.rs
server/src/handlers/user/: account.rs  auth.rs  mod.rs
server/src/models/calendar/: mod.rs  schedule.rs
server/src/models/invitation/: mod.rs
server/src/models/kanban/: list.rs  mod.rs  task.rs
server/src/models/role_permission/: mod.rs  permission.rs  role.rs
server/src/models/user/: account.rs  auth.rs  mod.rs
server/src/utils/: authentication.rs  authorization.rs  calendar_authorization.rs  kanban_authorization.rs
sql/: drops.sql  script.sql
sql/creates/: app_user.sql  calendar.sql  calendar_permissions.sql  kanban.sql  kanban_permissions.sql  role_permissions.sql
sql/inserts/: app_user.sql  calendar.sql  calendar_permissions.sql  kanban.sql  kanban_permissions.sql  role_permissions.sql
(+143 files in other folders)
