[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Env prod - dev
axum = { version = "0.7.6", features = ["multipart", "ws"] }
dotenvy = "0.15.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "chrono",
] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.0", features = ["fs", "cors"] }
tower-cookies = "0.10.0"
tokio-tungstenite = "0.26.1"
time = "0.3.36"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
data-encoding = "2.6.0"
sha2 = "0.10.8"
